# ROS_ROBOT

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_first_package/lib/my_first_package/: publisher  subscriber
install/my_first_package/share/my_first_package/: package.sh
install/robotic_chair_description/share/robotic_chair_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.sh
install/robotic_chair_description/share/robotic_chair_description/urdf/: chair.urdf
install/robotic_chair_nav/lib/robotic_chair_nav/: keyboard_control
install/robotic_chair_nav/share/robotic_chair_nav/: package.bash  package.sh
install/simple_world/share/simple_world/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/my_first_package/: package.xml  setup.py  simple_publisher.py
src/robotic_chair_nav/: setup.cfg  setup.py
src/robotic_chair_nav/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/robotic_chair_nav/install/robotic_chair_nav/share/robotic_chair_nav/: package.ps1  package.sh  package.xml  package.zsh
src/robotic_chair_nav/launch/: keyboard_control.launch.py
src/robotic_chair_nav/log/: latest_build
src/robotic_chair_nav/robotic_chair_nav/: keyboard_control.py
src/simple_world/: CMakeLists.txt
src/simple_world/models/simple_room/: model.config  model.sdf
src/simple_world/worlds/: robotic_chair_worlds.sdf  simple_world2.world
(+20 files in other folders)
